--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
      <!-- Project Description -->
       <div class="project-description" id="prj-des_schecker">
         <div class="prj-des-contents">
-          <h3 class="schecker-in-out">Schecker - App</h3>
+          <h3 class="schecker-in-out">Schecker</h3>
             <p class="schecker-in-out">
-              Conceptualisation & Design - a startup idea of a platform that streamlines the healthcare process.
+              App Conceptualisation & Design - from ideation to click-thru prototypes.
             </p>
           <!-- CTA -->
             <a class="CTA-button schecker-in-out" id="schecker-CTA" href="./scheckerIntro.html">
@@ -180,9 +180,9 @@
      <!-- Project Description -->
       <div class="project-description"  id="prj-des_bardot">
         <div class="prj-des-contents" id="prj-des-contents_bardot">
-          <h3 class="bardot-in-out">Bardot - Web</h3>
+          <h3 class="bardot-in-out">Bardot</h3>
             <p class="bardot-in-out">
-            UX/UI optimisation and website re-design for one of the most Australia's iconic fashion&nbsp;brands.
+            UX/UI optimisation and website re-design.
             </p>
           <!-- CTA -->
             <a class="CTA-button bardot-in-out" id="bardot-CTA" href="./bardot.html">
@@ -212,9 +212,9 @@
      <!-- Project Description -->
       <div class="project-description"  id="prj-des_sa">
         <div class="prj-des-contents" id="prj-des-contents_sa">
-          <h3 class="sa-in-out">Standards Australia - Web</h3>
+          <h3 class="sa-in-out">Standards Australia</h3>
             <p class="sa-in-out">
-              Visual website re-design for Australia's leading non-governmental, non-profit standards&nbsp;organisation.
+              Visual / UI website re-design.
             </p>
           <!-- CTA -->
             <a class="CTA-button sa-in-out" id="sa-CTA" href="./sa.html">
@@ -233,26 +233,26 @@
 
 
 <section class="flex-column" id="more-works">
-  <h3>There're more</h3>
-  <a class="big-link" href="./works.html" target="_blank"><h5>View all</h5></a>
+  <h3 class="contact-in-out">There're more</h3>
+  <a class="big-link contact-in-out" href="./works.html" target="_blank"><h5>View all</h5></a>
 </section>
 
 
 
 
 <section class="flex-column" id="contact-me">
-  <h1 style="text-align:center;" class="contact-in-out">Let's talk</h1>
+  <h1 style="text-align:center;">Let's talk</h1>
     <a class="big-link" id="home-mailto" target="_blank"
     href="mailto:nhuthoangdon@gmail.com?Subject=Got%20you%20an%20Offer&Body=Hey%20Nhut"><h5>Drop me a line</h5></a>
 
   <?xml version="1.0" encoding="UTF-8"?>
-    <svg class="contact-in-out" id="smiley-face" width="65px" height="58px" viewBox="0 0 65 58"
+    <svg id="smiley-face" width="65px" height="58px" viewBox="0 0 65 58"
          version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
         <!-- Generator: Sketch 63.1 (92452) - https://sketch.com -->
         <g id="smiley" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-            <circle id="leftEye" fill="#E2E9ED" cx="13.4997052" cy="10.5" r="10.5"></circle>
-            <ellipse id="rightEye" fill="#E2E9ED" cx="50.9997052" cy="10.5" rx="11" ry="10.5"></ellipse>
-            <path d="M0.792168941,40.4100891 C2.0554771,38.8065749 4.38116939,38.5294666 5.98674805,39.7911504 C15.1867404,47.0206195 24.0783917,50.5812525 32.7067171,50.6109828 C41.3186967,50.6406569 50.0589898,47.1538175 58.9878424,40.0097906 C60.58227,38.7340798 62.9103082,38.9907889 64.1876614,40.5831663 C65.4650146,42.1755437 65.207975,44.5005886 63.6135475,45.7762994 C53.4423598,53.9143258 43.1114927,58.0357063 32.6811922,57.999767 C22.2672374,57.9638839 11.8291364,53.7839801 1.4119045,45.597989 C-0.193674162,44.3363052 -0.471139222,42.0136033 0.792168941,40.4100891 Z" id="mouth" fill="#E2E9ED" fill-rule="nonzero"></path>
+            <circle id="leftEye" fill="#cad3d9" cx="13.4997052" cy="10.5" r="10.5"></circle>
+            <ellipse id="rightEye" fill="#cad3d9" cx="50.9997052" cy="10.5" rx="11" ry="10.5"></ellipse>
+            <path d="M0.792168941,40.4100891 C2.0554771,38.8065749 4.38116939,38.5294666 5.98674805,39.7911504 C15.1867404,47.0206195 24.0783917,50.5812525 32.7067171,50.6109828 C41.3186967,50.6406569 50.0589898,47.1538175 58.9878424,40.0097906 C60.58227,38.7340798 62.9103082,38.9907889 64.1876614,40.5831663 C65.4650146,42.1755437 65.207975,44.5005886 63.6135475,45.7762994 C53.4423598,53.9143258 43.1114927,58.0357063 32.6811922,57.999767 C22.2672374,57.9638839 11.8291364,53.7839801 1.4119045,45.597989 C-0.193674162,44.3363052 -0.471139222,42.0136033 0.792168941,40.4100891 Z" id="mouth" fill="#cad3d9" fill-rule="nonzero"></path>
         </g>
     </svg>
 </section>
