--- a/scheckerIntro.html
+++ b/scheckerIntro.html
@@ -77,16 +77,13 @@
 <section>
   <div class="wrapper" id="schecker-intro">
     <div class="block">
-      <h2>The idea</h2>
+      <h2>The Brief</h2>
     </div>
       <div class="block">
         <p>
-          <strong>AI</strong> has been integrated in more and more walks of life, including the healthcare industry.
-          The idea of this app is to tackle the self-diagnosing problem in patients, act as a bridge between patients and their
-          doctors, as well as aiding in the management of a condition.
-
-          The ambition of this platform is to educate the general public about health issues and connect them with healthcare
-          professionals in a streamlined process.
+          <strong><u>Purpose:</u></strong> building a smart, inclusive healthcare system that is accessible to anyone.<br />
+          <strong><u>Interface Requirements:</u></strong> easy to use for all/most audience from different demographics. <br />
+          <strong><u>My Role:</u></strong> conceptualise, UX/UI.
         </p>
       </div>
   </div>
@@ -96,7 +93,7 @@
 
 <section class="hiw-section" id="schecker-hiw-section">
 
-  <h3>Key Features</h3>
+  <h3>Feature Breakdown</h3>
 
   <div class="wrapper how-it-works" id="hiw-1">
     <div class="hiw-feature-heading justify-end">
@@ -109,8 +106,7 @@
 
     <div class="hiw-feature-desc">
       <p>
-        Straightforward symptom input screen as home screen with options to either choose symptoms with keywords or from visualised
-        body parts.
+        First step of the flow. Should be intuitive enough to provide users a hassle-free experience checking symptoms.
       </p>
     </div>
   </div>
@@ -121,7 +117,8 @@
 
     <div class="hiw-feature-desc">
       <p>
-        Easy booking process right from the listing screen. Appoinments listing, statuses are easily accessible.
+        Continued from Symptom checking result as next step of the flow, or book independently.
+        Easy and quick booking process with appoinment management features.
       </p>
     </div>
 
@@ -148,7 +145,7 @@
 
     <div class="hiw-feature-desc">
       <p>
-        Intuitive tracking & management screens to effectively keep track of symptoms and medication.
+        Allows users to manage diagnosed and undiagnosed symptoms/diseases and keep track of their medication.
       </p>
     </div>
 
@@ -176,7 +173,7 @@
 
 
   <div id="schecker-draggable-flow" >
-    <h5 class="secondary-title">App Flow<br /><small>(drag to view)</small></h5>
+    <h5 class="secondary-title">User-side App Flow<br /><small>(drag to view)</small></h5>
     <img alt="user flow" id="schecker-userFlow" src="./Assets/schecker-userflow.png" />
   </div>
 
