--- a/bardot.html
+++ b/bardot.html
@@ -70,11 +70,9 @@
 
   <div class="wrapper">
     <div class="block block-in">
-      <h2>Bardot</h2>
+      <h2>The Brief</h2>
       <p>
-        As a big eCommerce website, the project had a lot to take into consideration.
-        Our job was to optimise the whole site's UX/UI issues and deliver a refreshed one
-        as part of their re-platform process.
+        Optimise/review the whole site's UX/UI and deliver a new website to enhance user shopping experience and sale revenues.
       </p>
     </div>
       <div class="block block-in">
@@ -93,7 +91,7 @@
   <h3>CHALLENGES</h3>
     <div class="block">
       <p>
-        Many micro interactions, out-of-scope functionalities, heavy mobile optimisation.
+        Many micro interactions, out-of-scope functionalities, mobile optimisation for heavy contents.
       </p>
     </div>
 </section>
@@ -101,12 +99,10 @@
 <section id="bardot-home">
   <div class="wrapper">
     <div class="block small-block block-in">
-      <h4>SEARCH</h4>
+      <h4>SEARCH UI Enhancement</h4>
       <p>
-        The old search bar was visually unappealing and hard to find.
-        We re-designed it with trending items as a pre-suggestion since we wanted to take any opportunities to introduce these.
-        Psychologically speaking, we believed pre-suggestions would serve as 'hints'
-        to draw user's attention and probably alter their search intentions.
+        Redesigned search bar to be more visually prominent, incorporated trending items into expanded search panel
+        as pre-suggestions.
       </p>
     </div>
     <div class="block big-block no-text-block block-in">
@@ -118,12 +114,9 @@
       <img alt="Search Suggestions" class="desktop-screen" src="./Assets/bardot-searchSuggestion.jpg" />
     </div>
     <div class="block small-block block-in">
-      <h4>SEARCH SUGGESTIONS</h4>
+      <h4>SEARCH SUGGESTION UX</h4>
       <p>
-        Taking into account the scenarios and keywords customers likely to search for in an eCommerce fashion website,
-        we decided to display the suggestions not only base on the keywords but were also subjected to popularity/availability.
-        Product tiles/images were also placed intentionally as suggestions, because images speak better than words
-        (particularly true in the fashion world).
+        Improved suggestions base on user search behaviour research.
       </p>
     </div>
   </div>
@@ -137,13 +130,11 @@
 
 
   <div class="wrapper big-col light-bg-f9f9f9">
-    <h4 class="block-in">MINI LOGIN - CART - WISHLIST</h4>
+    <h4 class="block-in">Header Revamp</h4>
     <div class="block no-margin-top block-in">
       <p>
-        Base on results and heatmaps from user research, the majority of user interactions were within the top.
-        Login, Wishlish and Bag were the most clicked.
-        We decluttered the old header by removing unnecessary items, separating those links from the main category menu
-        and designed a new streamlined navigation with mandatory items easily accessible.
+        Decluttered old header by removing unnecessary items, made mandatory ones accessible (base on heatmaps from
+        user research).
       </p>
     </div>
 
@@ -155,12 +146,11 @@
 
 
   <div class="wrapper big-col">
-    <h4 class="block-in">MEGA DROPDOWN MENU</h4>
+    <h4 class="block-in">DROPDOWN MENU UI</h4>
     <div class="block no-margin-top block-in">
       <p>
-        We blew a new wind into the dropdown menu by integrating CTA banners (of trending items, promotions,
-        collections, etc.) that were relevant to each category. We made use of the header's real estate as much as possible for
-        highlight contents.
+        Enhanced dropdown menu visual and purposely added relevant promotional CTA banners to make use of the header's
+        real estate.
       </p>
     </div>
 
@@ -173,10 +163,10 @@
 
   <div class="wrapper light-bg-f9f9f9">
     <div class="block small-block block-in">
-      <h4>LOCATE IN-STORE</h4>
+      <h4>LOCATE IN-STORE Feature</h4>
       <p>
         An out-of-scope function to show which stores the item is currently available at.
-        We agreed that this should come up as a popup for a quick check-and-close action before moving on with the shopping.
+        Designed as a popup for a quick check-and-close action before the users continue with the browsing.
       </p>
     </div>
     <div class="block big-block no-text-block block-in">
@@ -184,11 +174,10 @@
     </div>
   </div>
   <div class="wrapper big-col">
-    <h4 class="block-in">STORE FINDER</h4>
+    <h4 class="block-in">Store finder Design</h4>
     <div class="block no-margin-top block-in">
       <p>
-        A store listing page with integrated Store finder and filter. Store-related promotions could also be
-        shown intentionally (if applicable).
+        Store finder design with store-related promotion panels.
       </p>
     </div>
     <img alt="Find a store" class="noShadow-img block-in" src="./Assets/bardot-findStore.png" />
@@ -204,10 +193,9 @@
 
   <div class="wrapper">
     <div class="block small-block block-in">
-      <h4>PRODUCT BADGES</h4>
+      <h4>PRODUCT BADGES Creation</h4>
       <p>
-        5 types of badges required. Each had to be visually distinguished from one another and fit well together within
-        each product tile.
+        Different types of product badges to be applied within each product tile.
       </p>
     </div>
     <div class="block no-text-block big-block block-in">
@@ -237,7 +225,6 @@
       <div id="tile_schecker"></div>
       <a href="./scheckerIntro.html" class="tile-CTA">
         <img alt="Schecker Logo" src="./Assets/Schecker_logo.png" />
-        <p>An <i class="i-innovative">innovative</i> Healthcare App</p>
       </a>
     </div>
 
@@ -245,7 +232,6 @@
       <div id="tile_sa"></div>
       <a href="./sa.html" class="tile-CTA">
         <img alt="SA Logo" src="./Assets/logo_sa.png" />
-        <p>A fully <small style="font-weight:800;">cus</small><i class="i-customised">tOm<b>isEd</b></i> NGO's Website</p>
       </a>
     </div>
 
