--- a/rr.html
+++ b/rr.html
@@ -70,18 +70,17 @@
 
   <div class="wrapper">
     <div class="block block-in">
-      <h2>Radio Rentals</h2>
+      <h2>The Brief</h2>
       <p>
-        Radio Rentals is one of the largest appliance and electronics lenders in Australia. I participated in the UX/UI enhancement
-        phase to propose UX solutions and create Customer Profile and Online Rental Application forms for optimal user experience.
+        UX/UI enhancements. UX solutions on the online forms for optimal user experience and drive application rate.
       </p>
     </div>
       <div class="block block-in">
         <p>
-          <strong>Project type</strong> <br />
-          Website design. <br /><br />
+          <strong>Project Type</strong> <br />
+          UX/UI research & enhancements. <br /><br />
           <strong>My Role</strong> <br />
-          UX/UI enhancements.
+          UX/UI design.
         </p>
       </div>
   </div>
@@ -92,9 +91,7 @@
   <h3 class="block-in">THE CHALLENGE</h3>
     <div class="block">
       <p>
-        As a lender platform, it is very important that customers have a fluid experience when applying for rentals. I worked with
-        the user research team to construct a seamless application process and an organised user profile that met customer needs.
-        Every micro interaction mattered.
+        Making a complex process pain-free.
       </p>
     </div>
 </section>
@@ -106,8 +103,7 @@
       <p>
         Each step of the application process was designed base on insights from user research and client's requirements.
         The process required quite many inputs and verifications which could be a hassle for customers if not presented well.
-        We agreed to break the process down to step by step and arranged the inputs by common order and their importance (Personal ->
-        Residental -> Income & Expenses -> Reference).
+        We agreed to break the process down to step by step and arranged the inputs by common order and their importance.
       </p>
     </div>
     <img class="noShadow-img block-in" alt="Application Process" src="./Assets/rr-application.png" />
@@ -119,10 +115,8 @@
     <h4 class="block-in">The Profile</h4>
     <div class="block no-margin-top block-in">
       <p>
-        Customer Profile was constructed under similar layout to the Online Rental Application for UI consistencies,
-        and to minimise development efforts. Customer Profile also contained complex rental/order/application information and details
-        which could be very content-heavy. Therefore, we organised relevant details in expandable panels and implemented paging for
-        data loading efficiency.
+        Customer Profile contained complex information, features and details, thus very content-heavy.
+        The pages were made after lots of discussions and rational decisions.
       </p>
     </div>
     <h5 class="block-in"><small>Hi-fi Wireframes</small></h5>
@@ -148,7 +142,6 @@
       <div id="tile_schecker"></div>
       <a href="./scheckerIntro.html" class="tile-CTA">
         <img alt="Bardot Logo" src="./Assets/Schecker_logo.png" />
-        <p>An <i class="i-innovative">innovative</i> Healthcare App</p>
       </a>
     </div>
 
@@ -156,7 +149,6 @@
       <div id="tile_bardot"></div>
       <a href="./bardot.html" class="tile-CTA">
         <img alt="Bardot Logo" src="./Assets/logo_bardot.png" />
-        <p>A <i class="i-delicate">delicate</i> eCommerce Website</p>
       </a>
     </div>
 
