--- a/sa.html
+++ b/sa.html
@@ -70,10 +70,9 @@
 
   <div class="wrapper">
     <div class="block block-in">
-      <h2>Standards Australia</h2>
+      <h2>The Brief</h2>
       <p>
-        Standards Australia is a non-governmental, non-profit organisation.
-        They were looking for a new website that looks visually appealing while being aligned with their brand guidelines.
+        A new website that looks visually appealing while being aligned with client's brand guidelines.
       </p>
     </div>
       <div class="block block-in">
@@ -103,9 +102,8 @@
     <h4 class="block-in">MENU/NAV Bar REVAMP</h4>
     <div class="block no-margin-top block-in">
       <p>
-        We redesigned the outdated generic menu with a multi-tier one to accommodate the heavy info on hover as per client's
-        requirements.
-        The Search Field was also emphasised to give users easier access to the Search Function.
+        Improved outdated generic menu with a multi-tier one to accommodate heavy info on hover as per client's
+        requirements. Redesigned header and emphasised search field.
       </p>
     </div>
     <img class="noShadow-img block-in" alt="Multi-level Menu" src="./Assets/sa-menu.png" />
@@ -120,18 +118,18 @@
       <img alt="Category Styling" class="noShadow-img" src="./Assets/sa-categoryColours.png" />
     </div>
     <div class="block small-block block-in">
-      <h4>CATEGORY STYLING</h4>
+      <h4>CATEGORY STYLING UI</h4>
       <p>
-        We assigned each Standards Category a monochromatic set of coloured blocks for visual and filtering purposes.
+        Assigned each Standards Category a monochromatic set of coloured blocks for visual and filtering purposes.
       </p>
     </div>
   </div>
 
   <div class="wrapper">
     <div class="block small-block block-in">
-      <h4>SEARCH</h4>
+      <h4>SEARCH panel improvement</h4>
       <p>
-        We modernised the expanded search panel to be clear and bold showing popular/most searched contents and standards.
+        Modern wide-width expanded search panel and suggestions.
       </p>
     </div>
     <div class="block big-block no-text-block block-in">
@@ -144,7 +142,7 @@
       <img alt="Search Suggestions" class="desktop-screen" src="./Assets/sa-searchResult.png" />
     </div>
     <div class="block small-block block-in">
-      <h4>SEARCH RESULTS</h4>
+      <h4>SEARCH RESULTS Display</h4>
       <p>
         Clear and simple display with intuitive filter and sort options.
       </p>
@@ -152,13 +150,12 @@
   </div>
 
   <div class="wrapper big-col light-bg-f9f9f9">
-    <h4 class="block-in">MANDATORY PAGES</h4>
+    <h4 class="block-in">Standard page layouts</h4>
     <div class="block no-margin-top block-in">
       <p>
-        As an informative website, customised layouts were required for most of the pages,
-        so we came up with a solution to breakdown contents into
-        modules/blocks to be reused whenever applicable, and for the sake of
-        development time and effort.
+        Contents are displayed as modules/blocks (hero image, full-width text, intro header, image block,
+        body text, section navigator, etc.) to maximise layout flexibility and page customisation while saving
+        development time/effort.
       </p>
     </div>
       <img alt="Info Pages" class="noShadow-img block-in" src="./Assets/sa-infoPages.png" />
@@ -169,7 +166,7 @@
 
   <div class="wrapper">
     <div class="block small-block block-in">
-      <h4>FORM &amp; POPUP STYLING</h4>
+      <h4>FORM &amp; POPUP STYLING guide</h4>
     </div>
     <div class="block big-block no-text-block block-in">
       <img alt="Form" class="noShadow-img" src="./Assets/sa-popup.png" />
@@ -181,7 +178,7 @@
       <img alt="eDM" class="appScreen" src="./Assets/sa-eDM.png" />
     </div>
     <div class="block small-block block-in">
-      <h4>EDM STYLING</h4>
+      <h4>EDM STYLING Guide</h4>
     </div>
   </div>
 
@@ -203,7 +200,6 @@
       <div id="tile_schecker"></div>
       <a href="./scheckerIntro.html" class="tile-CTA">
         <img alt="Bardot Logo" src="./Assets/Schecker_logo.png" />
-        <p>An <i class="i-innovative">innovative</i> Healthcare App</p>
       </a>
     </div>
 
@@ -211,7 +207,6 @@
       <div id="tile_rr"></div>
       <a href="./rr.html" class="tile-CTA">
         <img alt="Bardot Logo" src="./Assets/logo_rr.png" />
-        <p>A complex process <i class="i-simplified">simplified</i></p>
       </a>
     </div>
 
