--- a/rr.html
+++ b/rr.html
@@ -91,7 +91,7 @@
   <h3 class="block-in">THE CHALLENGE</h3>
     <div class="block">
       <p>
-        Making a complex process pain-free.
+        Making a complex process pain-free. Heavy information, multiple integrations.
       </p>
     </div>
 </section>
