--- a/works.html
+++ b/works.html
@@ -68,8 +68,7 @@
         <div class="work-tile block-in" >
           <div id="tile_schecker"></div>
           <a href="./scheckerIntro.html" class="tile-CTA">
-            <img alt="Bardot Logo" src="./Assets/Schecker_logo.png" />
-            <p>An <i class="i-innovative">innovative</i> Healthcare App</p>
+            <img alt="Schecker Logo" src="./Assets/Schecker_logo.png" />
           </a>
         </div>
 
@@ -77,7 +76,6 @@
           <div id="tile_bardot"></div>
           <a href="./bardot.html" class="tile-CTA">
             <img alt="Bardot Logo" src="./Assets/logo_bardot.png" />
-            <p>A <i class="i-delicate">delicate</i> eCommerce Website</p>
           </a>
         </div>
 
@@ -85,7 +83,6 @@
           <div id="tile_sa"></div>
           <a href="./sa.html" class="tile-CTA">
             <img alt="SA Logo" src="./Assets/logo_sa.png" />
-            <p>A fully <small style="font-weight:800;">cus</small><i class="i-customised">tOm<b>isEd</b></i> NGO's Website</p>
           </a>
         </div>
       </div>
@@ -99,7 +96,6 @@
           <div id="tile_rr"></div>
           <a href="./rr.html" class="tile-CTA">
             <img alt="SA Logo" src="./Assets/logo_rr.png" />
-            <p>A complex process <i class="i-simplified">simplified</i></p>
           </a>
         </div>
       </div>
