--- a/rr.html
+++ b/rr.html
@@ -103,7 +103,7 @@
       <p>
         Each step of the application process was designed base on insights from user research and client's requirements.
         The process required quite many inputs and verifications which could be a hassle for customers if not presented well.
-        We agreed to break the process down to step by step and arranged the inputs by common order and their importance.
+        The solutions were to break the process down to step by step and arrange the required information by common orders.
       </p>
     </div>
     <img class="noShadow-img block-in" alt="Application Process" src="./Assets/rr-application.png" />
@@ -116,7 +116,8 @@
     <div class="block no-margin-top block-in">
       <p>
         Customer Profile contained complex information, features and details, thus very content-heavy.
-        The pages were made after lots of discussions and rational decisions.
+        The page was designed with vertical section navigator to the left (desktop), and accordions for contents to the right.
+        Many other UI components were also used.
       </p>
     </div>
     <h5 class="block-in"><small>Hi-fi Wireframes</small></h5>
