--- a/scheckerIntro.html
+++ b/scheckerIntro.html
@@ -81,7 +81,8 @@
     </div>
       <div class="block">
         <p>
-          <strong><u>Purpose:</u></strong> building a smart, inclusive healthcare system that is accessible to anyone.<br />
+          <strong><u>Purpose:</u></strong> building a smart, inclusive healthcare system that is accessible to anyone.
+          Users: Patients (standard users) and Healthcare Providers (doctors/healthcare practicioners, clinics)<br />
           <strong><u>Interface Requirements:</u></strong> easy to use for all/most audience from different demographics. <br />
           <strong><u>My Role:</u></strong> conceptualise, UX/UI.
         </p>
@@ -173,7 +174,7 @@
 
 
   <div id="schecker-draggable-flow" >
-    <h5 class="secondary-title">User-side App Flow<br /><small>(drag to view)</small></h5>
+    <h5 class="secondary-title">End User App Flow (Patients)<br /><small>(drag to view)</small></h5>
     <img alt="user flow" id="schecker-userFlow" src="./Assets/schecker-userflow.png" />
   </div>
 
