--- a/rr.html
+++ b/rr.html
@@ -117,7 +117,7 @@
       <p>
         Customer Profile contained complex information, features and details, thus very content-heavy.
         The page was designed with vertical section navigator to the left (desktop), and accordions for contents to the right.
-        Many other UI components were also used.
+        Many other UI components were also used. UI was kept as simple as possible for optimal content loading speed.
       </p>
     </div>
     <h5 class="block-in"><small>Hi-fi Wireframes</small></h5>
