--- a/about.html
+++ b/about.html
@@ -49,9 +49,9 @@
     <div class="menu-items" id="menu-links">
       <ul>
         <li><a href="./index.html">Home</a></li>
-        <li><a href="./about.html"><span class="menu-items_highlight">About</span></a></li>
         <li><a href="./works.html">Works</a></li>
         <li><a href="mailto:nhuthoangdon@gmail.com?Subject=Offer%20for%20Nhut">Contact</a></li>
+        <li><a href="./about.html"><span class="menu-items_highlight">About</span></a></li>
       </ul>
     </div>
     </div>
@@ -64,15 +64,15 @@
     <h2>About me</h2>
     <p>
       <strong>The Profession:</strong> I am working as a UX/UI designer with a background in Multimedia Systems.
-      My ambition is to work on innovative products with great values. I am very enthusiastic (too much at times)
-      when it comes to problem solving and making things work.
+      One of my ambitions is to work on innovative products with great values. I enjoy solving problems with practical
+      solutions, and making complex things simple.
       <br />
       <br />
       <strong>The Me:</strong> I am a guaranteed team player at work, dog parent at home, and a loner on the road.
     </p>
 
     <p>
-      <small>I enjoy keeping a low profile, if you would like to contact me, please feel free to write me some words @
+      <small>Contact me @
         <a href="mailto:nhuthoangdon@gmail.com?Subject=Got%20you%20an%20Offer&Body=Hey%20Nhut">nhuthoangdon@gmail.com</a>
       </small>
     </p>
@@ -85,7 +85,7 @@
     <div class="portrait-cover">
       <p class="centered-text">
         <small>
-          <i>Nothing fancy here, just a pic of me. <br /> (Don't click if you have Trypophobia though)</i>
+          <i>Nothing fancy here, just a pic of me.</i>
         </small>
       </p>
       <div class="CTA-button" id="reveal-me-btn">
