--- a/sa.html
+++ b/sa.html
@@ -51,9 +51,9 @@
   <div class="menu-items" id="menu-links">
     <ul>
       <li><a href="./index.html">Home</a></li>
-      <li><a href="./about.html">About</a></li>
       <li><a href="./works.html">Works</a></li>
       <li><a href="mailto:nhuthoangdon@gmail.com?Subject=Offer%20for%20Nhut">Contact</a></li>
+      <li><a href="./about.html">About</a></li>
     </ul>
   </div>
   </div>
@@ -153,9 +153,9 @@
     <h4 class="block-in">Standard page layouts</h4>
     <div class="block no-margin-top block-in">
       <p>
-        Contents are displayed as modules/blocks (hero image, full-width text, intro header, image block,
-        body text, section navigator, etc.) to maximise layout flexibility and page customisation while saving
-        development time/effort.
+        Since the website might need many pages with different layouts, we came up with a solution to design contents as
+        modules (hero image, full-width text, intro header, image block, body text, section navigator, etc.) and allow
+        client to construct/customise page layouts in the CMS.
       </p>
     </div>
       <img alt="Info Pages" class="noShadow-img block-in" src="./Assets/sa-infoPages.png" />
