--- a/bardot.html
+++ b/bardot.html
@@ -193,9 +193,9 @@
 
   <div class="wrapper">
     <div class="block small-block block-in">
-      <h4>PRODUCT BADGES Creation</h4>
+      <h4>PRODUCT BADGE Design</h4>
       <p>
-        Different types of product badges to be applied within each product tile.
+        Unique product badges for applicable product tiles.
       </p>
     </div>
     <div class="block no-text-block big-block block-in">
