--- a/scheckerIntro.html
+++ b/scheckerIntro.html
@@ -51,7 +51,7 @@
     <li><a href="./index.html">Home</a></li>
     <li><a href="./works.html">Works</a></li>
     <li><a href="mailto:nhuthoangdon@gmail.com?Subject=Offer%20for%20Nhut">Contact</a></li>
-    <li><a href="./about.html">About</a></li>    
+    <li><a href="./about.html">About</a></li>
   </ul>
 </div>
 </div>
@@ -81,10 +81,11 @@
     </div>
       <div class="block">
         <p>
-          <strong><u>Purpose:</u></strong> building a smart, inclusive healthcare system that is accessible to anyone.
-          Users: Patients (standard users) and Healthcare Providers (doctors/healthcare practicioners, clinics)<br />
-          <strong><u>Interface Requirements:</u></strong> easy to use for all/most audience from different demographics. <br />
-          <strong><u>My Role:</u></strong> conceptualise, UX/UI.
+          <strong><u>Purpose:</u></strong> building a smart, inclusive healthcare system that is accessible to everyone.
+          <br />
+          <strong><u>Primary Target Market:</u></strong> developing countries.
+           <br />
+          <strong><u>My Role:</u></strong> conceptualise, UX/UI, product vision.
         </p>
       </div>
   </div>
