--- a/sa.html
+++ b/sa.html
@@ -72,7 +72,7 @@
     <div class="block block-in">
       <h2>The Brief</h2>
       <p>
-        A new website that looks visually appealing while being aligned with client's brand guidelines.
+        A new website that is informative, yet visually engaging.
       </p>
     </div>
       <div class="block block-in">
