--- a/scheckerIntro.html
+++ b/scheckerIntro.html
@@ -161,23 +161,23 @@
 <section id="concept-development">
   <h3>CONCEPT DEVELOPMENT</h3>
 
-  <div class="wrapper big-col" id="s_concept-flow">
-    <h5 id="s_concept-flow-h5">Simple Flow</h5>
-    <img id="s_concept-flow-img" alt="concept flow" class="noShadow-img" src="./Assets/schecker-simplifiedFlow.png" />
-  </div>
-
-
-
-  <div class="wrapper big-col" id="s_wireframe">
-    <h5 id="s_wireframe-h5">Low-fi Wireframe</h5>
-    <img id="s_wireframe-img" alt="wireframe" class="noShadow-img" src="./Assets/schecker-wireframe.png" />
-  </div>
-
-
   <div id="schecker-draggable-flow" >
     <h5 class="secondary-title">End User App Flow (Patients)<br /><small>(drag to view)</small></h5>
     <img alt="user flow" id="schecker-userFlow" src="./Assets/schecker-userflow.png" />
   </div>
+
+  <!-- <div class="wrapper big-col" id="s_concept-flow">
+    <h5 id="s_concept-flow-h5">Simple Flow</h5>
+    <img id="s_concept-flow-img" alt="concept flow" class="noShadow-img" src="./Assets/schecker-simplifiedFlow.png" />
+  </div> -->
+
+
+
+  <!-- <div class="wrapper big-col" id="s_wireframe">
+    <h5 id="s_wireframe-h5">Low-fi Wireframe</h5>
+    <img id="s_wireframe-img" alt="wireframe" class="noShadow-img" src="./Assets/schecker-wireframe.png" />
+  </div> -->
+
 
 
   <div class="leading-line" id="s_leading-line-5"></div>
