--- a/works.html
+++ b/works.html
@@ -50,7 +50,7 @@
 </div>
 <div class="menu-items" id="menu-links">
   <ul>
-    <li><a href="./index.html">Home</a></li>  
+    <li><a href="./index.html">Home</a></li>
     <li><a href="./works.html"><span class="menu-items_highlight">Works</span></a></li>
     <li><a href="mailto:nhuthoangdon@gmail.com?Subject=Offer%20for%20Nhut">Contact</a></li>
     <li><a href="./about.html">About</a></li>
@@ -105,6 +105,14 @@
 
     <div class="tile-set">
       <div class="work-tiles">
+
+        <div class="work-tile block-in">
+          <div id="tile_Danias"></div>
+          <a class="tile-CTA">
+            <!-- <img alt="Danias Website" src="./Assets/Danias-Homepage.jpg" /> -->
+            <p>Danias Website Design</p>
+          </a>
+        </div>
 
         <div class="work-tile block-in" >
           <div class="tile-desc">
