long time no test

--- a/scheckerIntro.html
+++ b/scheckerIntro.html
@@ -59,6 +59,7 @@
 
 
 
+<!-- MAIN CONTENT BELOW -->
 
 <section class="project-intro" id="schecker-hero-section">
   <div class="project-hero" id="schecker-hero">
