--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   </div>
   <div class="menu-items" id="menu-links">
     <ul>
-      <li><a href="./index.html"><span class="menu-items_highlight">Home</span></a></li>      
+      <li><a href="./index.html"><span class="menu-items_highlight">Home</span></a></li>
       <li><a href="./works.html">Works</a></li>
       <li><a href="./index.html#contact-me" rel="m_PageScroll2id">Contact</a></li>
       <li><a href="./about.html">About</a></li>
@@ -127,16 +127,17 @@
 
 
 <section class="flex-column" id="home-intro_2">
+  <!-- <div id="home-intro_2"> -->
     <h2 class="centered-text intro2-in-out">
         I do UX/UI, <br />
-        love to work on some creative stuff.
+        consider myself less a designer, and more a product enthusiast.
     </h2>
-
-    <p class="centered-text intro2-in-out" style="font-weight:400; font-size: 1em !important; letter-spacing: .1em;">
+  <!-- </div> -->
+    <!-- <p class="centered-text intro2-in-out" style="font-weight:400; font-size: 1em !important; letter-spacing: .1em;">
       <i>
           <img alt="scroll down" src="./Assets/thinArrow.svg" />
         </i>
-    </p>
+    </p> -->
 </section>
 
 
