--- a/index.html
+++ b/index.html
@@ -130,8 +130,9 @@
   <!-- <div id="home-intro_2"> -->
     <h2 class="centered-text intro2-in-out">
         I do UX/UI, <br />
-        consider myself less a designer, and more a product enthusiast.
     </h2>
+      <h3>  consider myself less a designer, more a product enthusiast. </h3>
+
   <!-- </div> -->
     <!-- <p class="centered-text intro2-in-out" style="font-weight:400; font-size: 1em !important; letter-spacing: .1em;">
       <i>
