--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     <h2 class="centered-text intro2-in-out">
         I do UX/UI, <br />
     </h2>
-      <h3>  consider myself less a designer, more a product enthusiast. </h3>
+      <h3 class="centered-text intro2-in-out"> consider myself less a designer, more a product enthusiast. </h3>
 
   <!-- </div> -->
     <!-- <p class="centered-text intro2-in-out" style="font-weight:400; font-size: 1em !important; letter-spacing: .1em;">
