First project layout update

--- a/index.html
+++ b/index.html
@@ -126,13 +126,14 @@
 
 
 
-<section class="flex-column centered-text intro2-in-out" id="home-intro_2">
+<section class="flex-column" id="home-intro_2">
   <!-- <div id="home-intro_2"> -->
+  <div class="centered-text intro2-in-out">
     <h2>
-        I do UX/UI, <br />
+        I do UX/UI.<br />
     </h2>
-      <h3> consider myself less a designer, more a product enthusiast. </h3>
-
+      <h3> Consider myself less a designer than a product enthusiast. </h3>
+  </div>
   <!-- </div> -->
     <!-- <p class="centered-text intro2-in-out" style="font-weight:400; font-size: 1em !important; letter-spacing: .1em;">
       <i>
@@ -145,15 +146,15 @@
 
 
 <section class="project" id="prj-schecker">
-  <div class="hero-overlay" id="hero-overlay_schecker"></div>
+    <!-- Project hero image -->
+    <a class="prj-hero_img" href="./scheckerIntro.html" class="hero-img"> </a>
 
-    <a href="./scheckerIntro.html" class="hero-img"> </a>
      <!-- Project Description -->
       <div class="project-description" id="prj-des_schecker">
         <div class="prj-des-contents">
           <h3 class="schecker-in-out">Schecker</h3>
             <p class="schecker-in-out">
-              App Conceptualisation & Design - from ideation to click-thru prototypes.
+              Product concept - Ideation - Vision - Prototyping
             </p>
           <!-- CTA -->
             <a class="CTA-button schecker-in-out" id="schecker-CTA" href="./scheckerIntro.html">
@@ -176,7 +177,7 @@
 <section class="project" id="prj-bardot">
   <div class="full-prj-img" id="bardot-homepage"></div>
 
-  <div class="hero-overlay" id="hero-overlay_bardot"></div>
+  <!-- <div class="hero-overlay" id="hero-overlay_bardot"></div> -->
 
     <a href="./bardot.html" class="hero-img"> </a>
      <!-- Project Description -->
@@ -208,7 +209,7 @@
 <section class="project" id="prj-sa">
   <div class="full-prj-img" id="sa-homepage"></div>
 
-  <div class="hero-overlay" id="hero-overlay_sa"></div>
+  <!-- <div class="hero-overlay" id="hero-overlay_sa"></div> -->
 
     <a href="./sa.html" class="hero-img"> </a>
      <!-- Project Description -->
