--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
 <section class="project" id="prj-schecker">
     <!-- Project hero image -->
-    <a class="prj-hero_img" href="./scheckerIntro.html" class="hero-img"> </a>
+    <a class="prj-hero_img" href="./scheckerIntro.html"> </a>
 
      <!-- Project Description -->
       <div class="project-description" id="prj-des_schecker">
@@ -157,7 +157,7 @@
               Product concept - Ideation - Vision - Prototyping
             </p>
           <!-- CTA -->
-            <a class="CTA-button schecker-in-out" id="schecker-CTA" href="./scheckerIntro.html">
+            <a class="CTA-button prj-CTA schecker-in-out" id="schecker-CTA" href="./scheckerIntro.html">
               <svg class="button-outline" width="188px" height="52px" viewBox="0 0 188 52">
                   <g stroke="none" stroke-width="2" fill="none" fill-rule="evenodd">
                       <g class="cta-btn-stroke" transform="translate(-780.000000, -669.000000)" fill-rule="nonzero" stroke="#0e83ea">
@@ -175,11 +175,8 @@
 
 
 <section class="project" id="prj-bardot">
-  <div class="full-prj-img" id="bardot-homepage"></div>
 
-  <!-- <div class="hero-overlay" id="hero-overlay_bardot"></div> -->
-
-    <a href="./bardot.html" class="hero-img"> </a>
+    <a href="./bardot.html" class="prj-hero_img"> </a>
      <!-- Project Description -->
       <div class="project-description"  id="prj-des_bardot">
         <div class="prj-des-contents" id="prj-des-contents_bardot">
@@ -188,7 +185,7 @@
             UX/UI optimisation and website re-design.
             </p>
           <!-- CTA -->
-            <a class="CTA-button bardot-in-out" id="bardot-CTA" href="./bardot.html">
+            <a class="CTA-button prj-CTA bardot-in-out" id="bardot-CTA" href="./bardot.html">
               <svg class="button-outline" width="188px" height="52px" viewBox="0 0 188 52">
                   <g stroke="none" stroke-width="2" fill="none" fill-rule="evenodd">
                       <g class="cta-btn-stroke" transform="translate(-780.000000, -669.000000)" fill-rule="nonzero" stroke="#0e83ea">
@@ -207,11 +204,8 @@
 
 
 <section class="project" id="prj-sa">
-  <div class="full-prj-img" id="sa-homepage"></div>
 
-  <!-- <div class="hero-overlay" id="hero-overlay_sa"></div> -->
-
-    <a href="./sa.html" class="hero-img"> </a>
+    <a href="./sa.html" class="prj-hero_img"> </a>
      <!-- Project Description -->
       <div class="project-description"  id="prj-des_sa">
         <div class="prj-des-contents" id="prj-des-contents_sa">
@@ -220,7 +214,7 @@
               Visual / UI website re-design.
             </p>
           <!-- CTA -->
-            <a class="CTA-button sa-in-out" id="sa-CTA" href="./sa.html">
+            <a class="CTA-button prj-CTA sa-in-out" id="sa-CTA" href="./sa.html">
               <svg class="button-outline" width="188px" height="52px" viewBox="0 0 188 52">
                   <g stroke="none" stroke-width="2" fill="none" fill-rule="evenodd">
                       <g class="cta-btn-stroke" transform="translate(-780.000000, -669.000000)" fill-rule="nonzero" stroke="#0e83ea">
